--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <a href="https://instagram.com/anandamiarta_/" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="https://twitter.com/boysevennn/" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="https://www.facebook.com/ananda.miarta.3/" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="https://vt.tiktok.com/ZSqJPasV/" class="tiktok"><i class="bx bxl-tiktok"></i></a>
+          <a href="https://www.youtube.com/c/AnandaMiarta/" class="youtube"><i class="bx bxl-youtube"></i></a>
           <a href="https://www.linkedin.com/in/ananda-miarta-31032519a" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
