--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -76,7 +74,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Ananda Miarta</h1>
-      <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="CEO of Ecproject.id, Data Sciences, Data Vizualitation, Businessman"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -96,7 +94,7 @@
             <img src="assets/img/1.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>UI/UX Designer &amp; Web Developer.</h3>
+            <h3>Data Sciences & Businessman</h3>
             <p class="font-italic">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
               magna aliqua.
@@ -105,7 +103,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 13 September 1999</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.example.com</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.anandamiarta.github.io</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +62 81246292605</li>
                   <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Mengwi, Badung, Bali</li>
                 </ul>
@@ -114,7 +112,7 @@
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 21</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Master</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>PhEmailone:</strong> miarta56@gmail.com</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> miarta56@gmail.com</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Available</li>
                 </ul>
               </div>
@@ -191,30 +189,37 @@
           <div class="col-lg-6" data-aos="fade-up">
 
             <div class="progress">
-              <span class="skill">Machine Learning <i class="val">75%</i></span>
+              <span class="skill">Machine Learning <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Data Analysis <i class="val">80%</i></span>
+              <span class="skill">Data Science <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Python <i class="val">80%</i></span>
+              <span class="skill">Python Programming <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">MS Office <i class="val">90%</i></span>
+              <span class="skill">Data Vizualitation <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">MySQL <i class="val">80%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -223,16 +228,16 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">Adobe Photoshop <i class="val">90%</i></span>
+              <span class="skill">MS Office <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Adobe Lightroom <i class="val">75%</i></span>
+              <span class="skill">Adobe Photoshop <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -247,6 +252,13 @@
               <span class="skill">Adobe XD <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Corel Draw <i class="val">70%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -336,9 +348,9 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Organization</h3>
             <div class="resume-item">
-              <h4>Paskibra Telkom University</h4>
+              <h4>Paskibra</h4>
               <h5>2017-2019 </h5>
-              <p><em>Experion, New York, NY </em></p>
+              <p><em>Telkom University</em></p>
               <ul>
                 <li>Leader of Paskibra Telkom University on 2019</li>
                 <li>Member of the Event Devision of Gathering Paskibra on 2019 </li>
@@ -348,9 +360,9 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Korps Protokoler Telkom University</h4>
+              <h4>Korps Protokoler</h4>
               <h5>2017 - 2019</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <p><em>Telkom University</em></p>
               <ul>
                 <li>Member of the Event Devision of Beauty Class and Table Manner on 2017-2018</li>
                 <li>Liaison Officer of Graduated and Senate Trial Telkom University on 2017-2019</li>
@@ -360,18 +372,18 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>BEM Kema Telkom University</h4>
+              <h4>BEM Kema</h4>
               <h5>2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <p><em>Telkom University</em></p>
               <ul>
                 <li>Internship in Kebijakan Internal Devision</li>
                 <li>Member of the Event Division in Seminar with New Rector Telkom University.</li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Marketing Crew Telkom University</h4>
+              <h4>Marketing Crew</h4>
               <h5>2018 - 2019</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <p><em>Telkom University</em></p>
               <ul>
                 <li>Data input for Students Registered in Telkom University</li>
                 <li>As a Costumer Service for Students or Parents Students Registered in Telkom University.</li>
@@ -382,7 +394,7 @@
             <div class="resume-item">
               <h4>International Office Student Buddy Club</h4>
               <h5>2019-2021</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <p><em>Telkom University</em></p>
               <ul>
                 <li>Staff of AMP International Office Buddy Club.</li>
                 <li>Member of the Event Division Welcoming Party</li>
@@ -432,10 +444,10 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/Jurnal.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/Jurnal.png" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="https://ejurnal.stmik-budidarma.ac.id/index.php/mib/article/view/2959" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
