--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <a href="https://twitter.com/boysevennn/" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="https://www.facebook.com/ananda.miarta.3/" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="https://www.youtube.com/c/AnandaMiarta/" class="youtube"><i class="bx bxl-youtube"></i></a>
-          <a href="https://www.linkedin.com/in/ananda-miarta-31032519a" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/ananda-miarta-31032519a/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
@@ -444,9 +444,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/Jurnal.png" class="img-fluid" alt="">
+              <img src="assets/img/Jurnall.pdf" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/Jurnal.png" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/Jurnall.pdf" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
                 <a href="https://ejurnal.stmik-budidarma.ac.id/index.php/mib/article/view/2959" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -669,19 +669,19 @@
               <div class="address">
                 <i class="icofont-google-map"></i>
                 <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>Jl.Teleng 01, Cengkok, Baha, Mengwi, Badung, Bali</p>
               </div>
 
               <div class="email">
                 <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>miarta56@gmail.com</p>
               </div>
 
               <div class="phone">
                 <i class="icofont-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <p>+62 81246292605</p>
               </div>
 
               <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
