--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/Jurnall.pdf" class="img-fluid" alt="">
+              <img src="assets/img/Jurnal.png" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/Jurnall.pdf" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
                 <a href="https://ejurnal.stmik-budidarma.ac.id/index.php/mib/article/view/2959" title="More Details"><i class="bx bx-link"></i></a>
